--- a/test/index.html
+++ b/test/index.html
@@ -1,26 +1,827 @@
 <!doctype html>
 <html lang="en">
-<head>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,minimal-ui" />
-	<meta charset="UTF-8">
-	<title>sscroll test</title>
-	<style>
-		#out{ width:100px; height:2000px; border:5px solid #f00;}
-	</style>
-	<script type="text/javascript" src="../src/xscroll.js"></script>
-	<script>
-		var div = document.createElement('div');
-		div.innerHTML = '<div>AAAA</div>';
-		var d = div.childNodes[0];
-		div.removeChild(d);
-		div.innerHTML = '';
-		console.log(d.innerHTML);
-	</script>
-</head>
-<body>
-	<div id="out">
-	
-	</div>
 
+<head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no,minimal-ui" />
+    <meta charset="UTF-8">
+    <title>sscroll test</title>
+    <style>
+    #out-box{
+    	height:200px;
+    	border:1px solid #0ff;
+    	overflow:hidden;
+    }
+    #out {
+        width:100px;
+        height:2000px;
+        border:5px solid #f00;
+    }
+    #scrolla{
+        height:300px;
+        border:1px solid #00f;
+    }
+
+    #scrollb{
+        height:200px;
+        border:1px solid #0ff;
+    }
+    </style>
+    <script type="text/javascript" src="../src/xscroll.js"></script>
+    <script>
+    	window.onload = function(){
+    		new xScroll({
+    			el:'#out-box',
+                onSrcollStart:function(){
+                    console.log('start')
+                },
+                onScrollMove:function(){
+                    console.log('move')  
+                },
+                onScrollEnd:function(){
+                    console.log('end')
+                }
+    		});
+            new xScroll({
+                el:'#tou'
+            });
+
+            new xScroll({
+                el:'#scrolla'
+            });
+            new xScroll({
+                el:'#scrollb'
+            });
+    	};
+    </script>
+</head>
+
+<body>
+	<div id="tou" style="display:inline-block;border:1px solid #f00;height:200px;">
+　一：沉稳
+
+　　（1）不要随便显露你的情绪。
+
+　　（2）不要逢人就诉说你的困难和遭遇。
+
+　　（3）在征询别人的意见之前，自己先思考，但不要先讲。
+
+　　（4）不要一有机会就唠叨你的不满。
+
+　　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+　一：沉稳
+
+　　（1）不要随便显露你的情绪。
+
+　　（2）不要逢人就诉说你的困难和遭遇。
+
+　　（3）在征询别人的意见之前，自己先思考，但不要先讲。
+
+　　（4）不要一有机会就唠叨你的不满。
+
+　　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。
+
+　　（2）对别人的小过失、小错误不要斤斤计较。
+
+　　（3）在金钱上要大方，学习三施（财施、法施、无畏施）
+
+　　（4）不要有权力的傲慢和知识的偏见。
+
+　　（5）任何成果和成就都应和别人分享。
+
+　　（6）必须有人牺牲或奉献的时候，自己走在前面。
+
+　　五：诚信
+
+　　(1)做不到的事情就不要说.说了就要努力做到.
+
+　　（2）虚的口号或标语不要常挂嘴上。
+
+　　（3）针对客户提出的“不诚信”问题，拿出改善的方法。
+
+　　（4）停止一切“不道德”的手段。
+
+　　（5）耍弄小聪明，要不得！
+
+　　（6）计算一下产品或服务的诚信代价，那就是品牌成本。
+
+　　六：担当
+
+　　（1）检讨任何过失的时候，先从自身或自己人开始反省。
+
+　　（2）事项结束后，先审查过错，再列述功劳。
+
+　　（3）认错从上级开始，表功从下级启动
+
+　　（4）着手一个计划，先将权责界定清楚，而且分配得当。
+
+　　（5）对“怕事”的人或组织要挑明了说。
+
+　　（6）因为勇于承担责任所造成的损失，公司应该承担
+　一：沉稳
+
+　　（1）不要随便显露你的情绪。
+
+　　（2）不要逢人就诉说你的困难和遭遇。
+
+　　（3）在征询别人的意见之前，自己先思考，但不要先讲。
+
+　　（4）不要一有机会就唠叨你的不满。
+
+　　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。
+
+　　（2）对别人的小过失、小错误不要斤斤计较。
+
+　　（3）在金钱上要大方，学习三施（财施、法施、无畏施）
+
+　　（4）不要有权力的傲慢和知识的偏见。
+
+　　（5）任何成果和成就都应和别人分享。
+
+　　（6）必须有人牺牲或奉献的时候，自己走在前面。
+
+　　五：诚信
+
+　　(1)做不到的事情就不要说.说了就要努力做到.
+
+　　（2）虚的口号或标语不要常挂嘴上。
+
+　　（3）针对客户提出的“不诚信”问题，拿出改善的方法。
+
+　　（4）停止一切“不道德”的手段。
+
+　　（5）耍弄小聪明，要不得！
+
+　　（6）计算一下产品或服务的诚信代价，那就是品牌成本。
+
+　　六：担当
+
+　　（1）检讨任何过失的时候，先从自身或自己人开始反省。
+
+　　（2）事项结束后，先审查过错，再列述功劳。
+
+　　（3）认错从上级开始，表功从下级启动
+
+　　（4）着手一个计划，先将权责界定清楚，而且分配得当。
+
+　　（5）对“怕事”的人或组织要挑明了说。
+
+　　（6）因为勇于承担责任所造成的损失，公司应该承担
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。
+
+　　（2）对别人的小过失、小错误不要斤斤计较。
+
+　　（3）在金钱上要大方，学习三施（财施、法施、无畏施）
+
+　　（4）不要有权力的傲慢和知识的偏见。
+
+　　（5）任何成果和成就都应和别人分享。
+
+　　（6）必须有人牺牲或奉献的时候，自己走在前面。
+
+　　五：诚信
+
+　　(1)做不到的事情就不要说.说了就要努力做到.
+
+　　（2）虚的口号或标语不要常挂嘴上。
+
+　　（3）针对客户提出的“不诚信”问题，拿出改善的方法。
+
+　　（4）停止一切“不道德”的手段。
+
+　　（5）耍弄小聪明，要不得！
+
+　　（6）计算一下产品或服务的诚信代价，那就是品牌成本。
+
+　　六：担当
+
+　　（1）检讨任何过失的时候，先从自身或自己人开始反省。
+
+　　（2）事项结束后，先审查过错，再列述功劳。
+
+　　（3）认错从上级开始，表功从下级启动
+
+　　（4）着手一个计划，先将权责界定清楚，而且分配得当。
+
+　　（5）对“怕事”的人或组织要挑明了说。
+
+　　（6）因为勇于承担责任所造成的损失，公司应该承担
+    </pre>
+    </div>
+    <div id="out-box" style="width:100%">
+    <pre>
+
+　　（2）不要逢人就诉说你的困难和遭遇。
+
+　　（3）在征询别人的意见之前，自己先思考，但不要先讲。
+
+　　（4）不要一有机会就唠叨你的不满。
+
+　　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+
+　　（1）对身边发生的事情，常思考它们的因果关系。
+
+　　（2）对做不到位的执行问题，要发掘它们的根本症结。
+
+　　（3）对习以为常的做事方法，要有改进或优化的建议。
+
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　　四：大度
+
+　　（1）不要刻意把有可能是伙伴的人变成对手。
+
+　　（2）对别人的小过失、小错误不要斤斤计较。
+
+　　（3）在金钱上要大方，学习三施（财施、法施、无畏施）
+
+　　（4）不要有权力的傲慢和知识的偏见。
+
+    
+    </div>
+
+    <div id="scrolla">
+        <pre>
+        （4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+</pre>
+         <div id="scrollb">
+            <pre>
+　　（4）做什么事情都要养成有条不紊和井然有序的习惯。
+
+　　（5）经常去找几个别人看不出来的毛病或弊端。
+
+　　（6）自己要随时随地对有所不足的地方补位。
+
+　　三：胆识
+
+　　（1）不要常用缺乏自信的词句
+
+　　（2）不要常常反悔，轻易推翻已经决定的事。
+
+　　（3）在众人争执不休时，不要没有主见。
+
+　　（4）整体氛围低落时，你要乐观、阳光。
+
+　　（5）做任何事情都要用心，因为有人在看着你。
+
+　　（6）事情不顺的时候，歇口气，重新寻找突破口，就结束也要干净利落。
+
+　（5）重要的决定尽量有别人商量，最好隔一天再发布。
+
+　　(6)讲话不要有任何慌张,走路也一样.
+
+　　二：细心
+        </pre>
+        </div>
+    </div>
 </body>
+
 </html>
