--- a/index.html
+++ b/index.html
@@ -3,69 +3,107 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Xscroll by ouxingzhi</title>
+    <title>xScroll demo</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <script src="javascripts/common.js"></script>
+
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Xscroll</h1>
-        <p>移动端触屏框架</p>
-
-        <p class="view"><a href="https://github.com/ouxingzhi/xscroll">View the Project on GitHub <small>ouxingzhi/xscroll</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/ouxingzhi/xscroll/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ouxingzhi/xscroll/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ouxingzhi/xscroll">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/ouxingzhi">ouxingzhi</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+    <ul class="menu-box">
+      <li class="cur">小说</li>
+      <li>目录</li>
+      <li>图片格子</li>
+      <li>图片列表</li>
+    </ul>
+    <div class="scroll-box">
+      <div>
+        <script>include('./data/content1-1.html')</script>
+      </div>
+      <div>
+        <div class="content"  style="width:50%;height:100%;float:left">
+            <script>include('./data/content2-1.html')</script>
+        </div>
+        <div class="content"  style="width:50%;height:100%;float:right">
+            <script>include('./data/content2-2.html')</script>
+        </div>
+      </div>
+      <div>
+        <div class="content"  style="width:50%;height:50%;float:left">
+            <script>include('./data/content3-1.html')</script>
+        </div>
+        <div class="content"  style="width:50%;height:50%;float:right">
+            <script>include('./data/content3-2.html')</script>
+        </div>
+        <div class="content"  style="width:50%;height:50%;float:left">
+            <script>include('./data/content3-3.html')</script>
+        </div>
+        <div class="content"  style="width:50%;height:50%;float:right">
+            <script>include('./data/content3-4.html')</script>
+        </div>
+      </div>
+      <div>
+        <div id="arclist" class="content"  style="width:30%;height:100%;float:left">
+            <script>include('./data/content4-1.html')</script>
+        </div>
+        <div id="arcbox" class="content"  style="width:70%;height:100%;float:right">
+            <script>include('./data/content4-2.html')</script>
+        </div>
+      </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <script src="src/xscroll.js"></script>
+    <script>
+      function $(cls){
+          return document.querySelectorAll(cls);
+      }
+      var slice = Array.prototype.slice;
+      var menubox = $('.menu-box')[0],
+          menus = slice.call($('.menu-box li')),
+          scrollbox = $('.scroll-box')[0],
+          subbox = slice.call($('.scroll-box > div')),
+          contents = slice.call($('.content')),
+          body = document.body;
+      window.onresize = function(){
+          scrollbox.style.height = (window.innerHeight - menubox.offsetHeight) + 'px';
+      };
+      window.onresize();
+      function switchTab(index){
+          menus.forEach(function(li){ li.className = ''});
+          menus[index].className = 'cur';
+          subbox.forEach(function(li){ li.style.display = 'none'});
+          subbox[index].style.display = 'block';
+      }
+      menus.forEach(function(v,i){
+        v.addEventListener('click',function(){
+            switchTab(i);
+        });
+      })
+      switchTab(0);
+      //四个大框架的滚动
+      subbox.forEach(function(li){ 
+        new xScroll({
+          el:li
+        });
+      });
+      contents.forEach(function(li){ 
+        li.xScroll = new xScroll({
+          el:li
+        });
+      });
+
+      var arclist = $('#arclist')[0],
+          arcbox = $('#arcbox')[0];
+      arclist.addEventListener('click',function(e){
+          if(e.target.nodeName === 'LI'){
+              loadHtml(e.target.getAttribute('data-url'),arcbox.xScroll.getContent());
+          }
+      },false);
+      setTimeout(function(){
+        var target = $('#arclist li')[0];
+        loadHtml(target.getAttribute('data-url'),arcbox.xScroll.getContent());
+      },1000);
+      
+    </script>
   </body>
 </html>
